# swift-llbuild

./: CMakeLists.txt  Package.swift
cmake/modules/: Utility.cmake
docs/: buildsystem.rst
examples/simple-make/: count-lines-4
include/llbuild/Basic/: PlatformUtility.h  Subprocess.h
lib/Basic/: ExecutionQueue.cpp  PlatformUtility.cpp  ShellUtility.cpp  Subprocess.cpp
lib/BuildSystem/: BuildSystem.cpp  BuildSystemExtensionManager.cpp
lib/Commands/: NinjaBuildCommand.cpp
lib/Core/: MakefileDepsParser.cpp
lib/llvm/: import-llvm
lib/llvm/Support/: CMakeLists.txt
products/libllbuild/: BuildSystem-C-API.cpp
products/libllbuild/include/: module.modulemap
products/llbuildSwift/: CMakeLists.txt
tests/: lit.cfg
tests/SwiftBuildTool/: changed-commands.swift-build  dependencies.swift-build  swift-compiler.swift-build  swift-version.swift-build
unittests/Basic/: FileSystemTest.cpp  POSIXEnvironmentTest.cpp
unittests/BuildSystem/: BuildSystemTaskTests.cpp
